--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,6 +40,15 @@
 	},
 
 	"mounts": [
-		"source=stafl-devcontainer-data,target=/home/vscode,type=volume"
-	]
+		"source=stafl-devcontainer-data,target=/home/vscode,type=volume",
+		"source=/mnt/wslg,target=/mnt/wslg,type=bind",
+		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind"
+	],
+
+	"containerEnv": {
+		"DISPLAY": ":0",
+		"PULSE_SERVER": "/mnt/wslg/PulseServer",
+		"WAYLAND_DISPLAY": "wayland-0",
+		"XDG_RUNTIME_DIR": "/mnt/wslg/runtime-dir"
+	}
 }
