add tools for sphinx build to dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/v0.205.1/containers/ubuntu/.devcontainer/base.Dockerfile
 
 ARG VARIANT="jammy"
+ARG DOXYGEN_VERSION="1.9.5"
 
 FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 ARG VARIANT
@@ -9,7 +10,8 @@ ARG TARGETPLATFORM
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends clang llvm-14 clang-format-14 g++ lcov gdb ninja-build wget bzip2 python2.7-dev python3 python3-pip gcc-multilib-mips-linux-gnu gcc-mips-linux-gnu g++-mips-linux-gnu qemu-user libncurses5 graphviz plantuml make \
     && pip install cmake \
-    && ln -s /usr/bin/llvm-cov-14 /usr/bin/llvm-cov
+    && ln -s /usr/bin/llvm-cov-14 /usr/bin/llvm-cov \
+    && pip install sphinx && pip install breathe && pip install sphinx_rtd_theme && pip install sphinxcontrib-plantuml
 
 WORKDIR /opt
 
@@ -41,3 +43,10 @@ ADD build/TivaWare_C_Series-2.2.0.295 /opt/TivaWare_C_Series-2.2.0.295
 
 # Allow opt dir to be written
 RUN chmod -R -v 777 /opt
+
+# Set up doxygen
+ARG DOXYGEN_ARCHIVE="doxygen-$DOXYGEN_VERSION.linux.bin.tar.gz"
+ARG DOXYGEN_URL="https://www.doxygen.nl/files/$DOXYGEN_ARCHIVE"
+
+WORKDIR /tmp
+RUN wget $DOXYGEN_URL && gzip -xzf $DOXYGEN_ARCHIVE && cd doxygen-$DOXYGEN_VERSION && make install
