add user setup files

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -50,3 +50,6 @@ ARG DOXYGEN_URL="https://www.doxygen.nl/files/$DOXYGEN_ARCHIVE"
 
 WORKDIR /tmp
 RUN wget $DOXYGEN_URL && gzip -xzf $DOXYGEN_ARCHIVE && cd doxygen-$DOXYGEN_VERSION && make install
+
+# Add user setup scripts
+ADD user-setup-scripts /user-setup-scripts
