--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,13 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.205.1/containers/ubuntu
 {
 	"name": "Ubuntu",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"args": {
-			"VARIANT": "jammy",
-			"DOCKER_BUILDKIT": "1"
-		}
-	},
+	"image": "ghcr.io/staflsystems/stafl-devcontainer-ci",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {},
 	// Add the IDs of extensions you want installed when the container is created.
@@ -27,9 +21,6 @@
 	// "postCreateCommand": "uname -a",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
-	"features": {
-		"sshd": "latest"
-	},
 	"mounts": [
 		"source=stafl-devcontainer-data,target=/home/vscode,type=volume",
 		"source=/mnt/wslg,target=/mnt/wslg,type=bind", // comment out if not on Windows 11
