Add Chromium to the devcontainer to allow utilities like `mdpdf` to be used.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,16 +9,18 @@ ARG TARGETPLATFORM
 # Add user setup scripts
 ADD user-setup-scripts /user-setup-scripts
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+RUN export DEBIAN_FRONTEND=noninteractive \
+    && apt-get update \
     && apt-get -y install --no-install-recommends curl clang llvm-14 clang-format-14 g++ lcov gdb ninja-build wget bzip2 python2.7-dev python3 python3-pip python3-dev gcc-multilib-mips-linux-gnu gcc-mips-linux-gnu g++-mips-linux-gnu qemu-user libncurses5 graphviz plantuml make software-properties-common \
     && pip install cmake breathe sphinx sphinx_rtd_theme sphinxcontrib-plantuml \
     && ln -s /usr/bin/llvm-cov-14 /usr/bin/llvm-cov \
-    && add-apt-repository ppa:mozillateam/ppa \
+    && add-apt-repository -y -n ppa:mozillateam/ppa \
+    && add-apt-repository -y -n ppa:saiarcot895/chromium-beta \
     && cat /user-setup-scripts/firefox/firefox-pin.txt > /etc/apt/preferences.d/mozilla-firefox \
     && echo 'Unattended-Upgrade::Allowed-Origins:: "LP-PPA-mozillateam:${VARIANT}";' > /etc/apt/apt.conf.d/51unattended-upgrades-firefox \
     && curl -fsSL https://deb.nodesource.com/setup_current.x | sudo -E bash - \
     && apt-get update \
-    && apt-get -y install --no-install-recommends nodejs firefox
+    && apt-get -y install --no-install-recommends nodejs firefox chromium-browser
 
 
 WORKDIR /opt
