--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,13 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.205.1/containers/ubuntu
 {
 	"name": "Ubuntu",
-	"image": "ghcr.io/staflsystems/stafl-devcontainer-ci",
+	"build": {
+		"dockerfile": "Dockerfile",
+		"args": {
+			"VARIANT": "jammy",
+			"DOCKER_BUILDKIT": "1"
+		}
+	},
 	// Set *default* container specific settings.json values on container create.
 	"settings": {},
 	// Add the IDs of extensions you want installed when the container is created.
@@ -23,14 +29,14 @@
 	"remoteUser": "vscode",
 	"mounts": [
 		"source=stafl-devcontainer-data,target=/home/vscode,type=volume",
-		"source=/mnt/wslg,target=/mnt/wslg,type=bind", // comment out if not on Windows 11
-		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind" // comment out if not on Windows 11
+		// "source=/mnt/wslg,target=/mnt/wslg,type=bind", // comment out if not on Windows 11
+		// "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind" // comment out if not on Windows 11
 	],
-	// comment out if not on Windows 11
-	"containerEnv": {
-		"DISPLAY": ":0",
-		"PULSE_SERVER": "/mnt/wslg/PulseServer",
-		"WAYLAND_DISPLAY": "wayland-0",
-		"XDG_RUNTIME_DIR": "/mnt/wslg/runtime-dir"
-	}
+	// // comment out if not on Windows 11
+	// "containerEnv": {
+	// 	"DISPLAY": ":0",
+	// 	"PULSE_SERVER": "/mnt/wslg/PulseServer",
+	// 	"WAYLAND_DISPLAY": "wayland-0",
+	// 	"XDG_RUNTIME_DIR": "/mnt/wslg/runtime-dir"
+	// }
 }
