--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,10 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.205.1/containers/ubuntu
 {
 	"name": "Ubuntu",
-	"image": "ghcr.io/staflsystems/stafl-devcontainer-ci",
+	// "image": "ghcr.io/staflsystems/stafl-devcontainer-ci",
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "stafl-devcontainer",
+	"workspaceFolder": "/workspaces/stafl-devcontainer",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {},
 	// Add the IDs of extensions you want installed when the container is created.
