--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "Ubuntu",
 	// "image": "ghcr.io/staflsystems/stafl-devcontainer-ci",
-	"dockerComposeFile": "docker-compose.yml",
+	"dockerComposeFile": "../docker-compose.yml",
 	"service": "stafl-devcontainer",
 	"workspaceFolder": "/workspaces/stafl-devcontainer",
 	// Set *default* container specific settings.json values on container create.
