--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,5 +36,6 @@
 		"PULSE_SERVER": "/mnt/wslg/PulseServer",
 		"WAYLAND_DISPLAY": "wayland-0",
 		"XDG_RUNTIME_DIR": "/mnt/wslg/runtime-dir"
-	}
+	},
+	"shutdownAction": "stopCompose",
 }
