--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.7'
+version: '3.9'
 
 services:
   stafl-devcontainer:
-    image: "ghcr.io/staflsystems/stafl-devcontainer-ci"
+    image: "ghcr.io/staflsystems/stafl-devcontainer-ci:latest"
     environment:
       - KROKI_HOST=kroki
   kroki:
