--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 		"ms-vscode.cmake-tools",
 		"cschlosser.doxdocgen",
 		"ms-vscode-remote.vscode-remote-extensionpack",
-		"gruntfuggly.todo-tree"
+		"gruntfuggly.todo-tree",
+        "Axivion.vscodeplugin"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -22,16 +23,21 @@
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"mounts": [
-		"source=stafl-devcontainer-data,target=/home/vscode,type=volume",
-		// "src=/home/<YOUR_WSL_USERNAME>/projects,target=/home/vscode/projects,type=bind", // Replace with you WSL username
-		"source=/mnt/wslg,target=/mnt/wslg,type=bind", // comment out if not on Windows 11
-		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind" // comment out if not on Windows 11
+		"source=stafl-devcontainer-data-axivion,target=/home/vscode,type=volume",
+		"src=/home/gfreese/work,target=/home/vscode/work,type=bind",
+		"src=/home/gfreese/gdrive-grant,target=/home/vscode/gdrive-grant,type=bind",
+		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
+		"source=/run/user/1000,target=/run/user/1000,type=bind"
 	],
 	// comment out if not on Windows 11
 	"containerEnv": {
 		"DISPLAY": ":0",
-		"PULSE_SERVER": "/mnt/wslg/PulseServer",
 		"WAYLAND_DISPLAY": "wayland-0",
-		"XDG_RUNTIME_DIR": "/mnt/wslg/runtime-dir"
-	}
+		"XDG_RUNTIME_DIR": "/run/user/1000"
+	},
+    "runArgs": [
+        "--hostname", "vscode",
+        "--ipc", "host"
+    ]
+
 }
