--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -1,13 +1,16 @@
-name: Build and Publish Docker Image
+name: Build and Push Docker Image
 
 on:
   push:
     branches: ['main']
   pull_request:  
 
+env:
+  DOCKER_IMAGE_NAME: ghcr.io/staflsystems/stafl-devcontainer-ci
+  
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -29,36 +32,28 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           echo "Version: ${{steps.staflversion.outputs.full}}"
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/staflsystems/stafl-devcontainer-ci
       
-      - name: Build and push Docker image
+      - name: Build Docker image
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: ${{ github.workspace }}/stafl-devcontainer
           push: false
           tags: ghcr.io/staflsystems/stafl-devcontainer-ci
-          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker image
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: ${{ github.workspace }}/stafl-devcontainer
           push: true
           tags: | 
-            ghcr.io/staflsystems/stafl-devcontainer-ci:latest
-            ghcr.io/staflsystems/stafl-devcontainer-ci:${{ steps.staflversion.outputs.major }}.${{ steps.staflversion.outputs.minor }}.${{ steps.staflversion.outputs.patch }}-${{ steps.staflversion.outputs.build }}
-          labels: ${{ steps.meta.outputs.labels }}
+            ${{ env.DOCKER_IMAGE_NAME }}:latest
+            ${{ env.DOCKER_IMAGE_NAME }}:${{ steps.staflversion.outputs.major }}.${{ steps.staflversion.outputs.minor }}.${{ steps.staflversion.outputs.patch }}-${{ steps.staflversion.outputs.build }}
 
       - name: Create a GitHub release (main)
         if: github.ref == 'refs/heads/main'
         uses: StaflSystems/release-action@main
         with:
-          tag: ${{ steps.staflversion.outputs.major }}.${{ steps.staflversion.outputs.minor }}.${{ steps.staflversion.outputs.patch }}-${{ steps.staflversion.outputs.build }}
+          tag: ${{ steps.staflversion.outputs.full }}
           commit: ${{ github.sha }}
