CI Build and Push & Container Upgrades (#26)
Adds docker build and push image to CI pipeline

Docker Image Upgrades
- Adds ksh, bash-completion, ripgrep
- Updates nodejs installation method
- Updates git 
- Fixes git-lfs installation
- Adds graphite-cli

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
 
 	"remoteUser": "vscode",
 	"mounts": [
-		// "src=/home/<YOUR_WSL_USERNAME>/projects,target=/home/vscode/projects,type=bind", // Replace with you WSL username
+		"src=/home/osadmin/projects,target=/home/vscode/projects,type=bind", // Replace `osadmin` with your WSL username
 		"source=/mnt/wslg,target=/mnt/wslg,type=bind", // comment out if not on Windows 11
 		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind" // comment out if not on Windows 11
 	],
