Add python-venv and remove python packages. +semver:minor (#27)
We are going to be managing python dependencies fully within our C++ projects from here on out. Removing old dependencies and installing python-venv.

Update the structurizr URL, the other release had been removed.

--- a/stafl-devcontainer/Dockerfile
+++ b/stafl-devcontainer/Dockerfile
@@ -11,9 +11,9 @@ ADD user-setup-scripts /user-setup-scripts
 
 RUN export DEBIAN_FRONTEND=noninteractive \
   && apt-get update \
-  && apt-get -y install --no-install-recommends curl clang llvm-14 clang-format-14 doxygen g++ lcov gdb ninja-build wget bzip2 python2.7-dev python3 python3-pip python3-dev gcc-multilib-mips-linux-gnu gcc-mips-linux-gnu g++-mips-linux-gnu qemu-user libncurses5 graphviz plantuml make software-properties-common udev ksh ripgrep bash-completion ca-certificates curl gnupg dos2unix\
+  && apt-get -y install --no-install-recommends curl clang llvm-14 clang-format-14 doxygen g++ lcov gdb ninja-build wget bzip2 python2.7-dev python3 python3-pip python3-dev python3.10-venv gcc-multilib-mips-linux-gnu gcc-mips-linux-gnu g++-mips-linux-gnu qemu-user libncurses5 graphviz plantuml make software-properties-common udev ksh ripgrep bash-completion ca-certificates curl gnupg dos2unix\
   && find -path '/user-setup-scripts/*' | xargs dos2unix \
-  && pip install cmake breathe sphinx sphinx_rtd_theme sphinxcontrib-plantuml sphinxcontrib-kroki \
+  && pip install cmake \
   && ln -s /usr/bin/llvm-cov-14 /usr/bin/llvm-cov \
   && ln -s /usr/bin/llvm-profdata-14 /usr/bin/llvm-profdata \
   && add-apt-repository -y -n ppa:mozillateam/ppa \
@@ -75,7 +75,7 @@ RUN case ${TARGETPLATFORM} in \
   && sudo apt install -y ./jlink_install.deb \
   && rm ./jlink_install.deb
 
-ARG STRUCTURIZR_CLI_URL="https://github.com/structurizr/cli/releases/download/v1.33.1/structurizr-cli-1.33.1.zip"
+ARG STRUCTURIZR_CLI_URL="https://github.com/structurizr/cli/releases/download/v1.35.0/structurizr-cli-1.35.0.zip"
 RUN sudo wget -q "${STRUCTURIZR_CLI_URL}" -O ./structurizr.zip \
     && sudo unzip structurizr.zip -d /usr/bin/structurizr  \
     && sudo ln -s /usr/bin/structurizr/structurizr.sh /usr/bin/structurizr/structurizr \
