--- a/stafl-devcontainer/.gitattributes
+++ b/stafl-devcontainer/.gitattributes
@@ -1,2 +1,3 @@
 *.vsix filter=lfs diff=lfs merge=lfs -text
 *.so filter=lfs diff=lfs merge=lfs -text
+llvm-cov-* filter=lfs diff=lfs merge=lfs -text
