--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   build_and_push:
     name: Build and Push Docker Image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-medium
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
